Vertical Bug Fixed

--- a/TicTacToe/TicTacToe.css
+++ b/TicTacToe/TicTacToe.css
@@ -25,3 +25,12 @@
   background: lightblue;
 
 }
+
+#b{
+  background-color: purple;
+  font-family: sans-serif;
+  color: white;
+  border-radius: 10px;
+  
+
+}
