--- a/ConnectFour/ConnectFour.css
+++ b/ConnectFour/ConnectFour.css
@@ -1,12 +1,13 @@
 .circle{
 
-  height: 24vh;
-  width: 24vh;
+  height: 12vh;
+  width: 12vh;
   /* color: lightblue; */
   background-color: lightblue;
   border-radius:100%;
   /* float: left; */
   margin: 4px;
+  border: 2px solid black;
 
 }
 
